[package]
name = "nnv-py"
version = "0.1.0"
edition = "2021"
description   = "Python Bindings for Verification and Statistics on Deep Neural Networks"
readme        = "README.md"
repository    = "https://github.com/drkwint/nnv-py"
license       = "MIT"
keywords      = ["ndarray", "statistics", "verification", "machine learning"]
categories    = ["algorithms", "simulation", "science"]
exclude = [
    ".github",
]

[lib]
name = "nnv_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.15.1", features = ["extension-module"] }
env_logger = "0.9.0"
numpy = "^0.15.0"
nnv-rs = { version = "^0.5.4", features = ["blas_openblas-system", "lp_gurobi"] }
num = "^0.4.0"
rand = "^0.8.4"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"
target-cpu = "native"
opt-level = 3
