[package]
name = "nnv-py"
version = "0.2.0"
edition = "2021"
description   = "Python Bindings for Verification and Statistics on Deep Neural Networks"
readme        = "README.md"
repository    = "https://github.com/drkwint/nnv-py"
license       = "MIT"
keywords      = ["ndarray", "statistics", "verification", "machine learning"]
categories    = ["algorithms", "simulation", "science"]
exclude = [
    ".github",
]

[lib]
name = "nnv_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "^0.15.1", features = ["extension-module"] }
env_logger = "0.9.0"
itertools = "^0.10.3"
numpy = "^0.15.0"
nnv-rs = { path = '../nnv-rs', features = ["blas_openblas-system", "lp_gurobi"] } #{ version = "0.6.0", features = ["blas_openblas-system", "lp_gurobi"] }
num = "^0.4.0"
rand = "^0.8.4"
serde_json = "^1.0.75"
statrs = "^0.15.0"

[profile.release]
lto = true
codegen-units = 1
target-cpu = "native"
opt-level = 3
debug = true
